--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Titulo da Página</h1>
+    <h1>Mate Academy</h1>
 
     <ul>
         <li>Vermelho</li>
     </ul>
 </body>
 
-</html>
+</html>code clr
